--- a/app/src/main/res/layout/activity_google_email_verification.xml
+++ b/app/src/main/res/layout/activity_google_email_verification.xml
@@ -1,78 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 
-	<TextView
-		android:id="@+id/google_email_verification_activity_header"
+	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_margin="13dp"
-		android:text="@string/contraction_google_email_verification_header"
-		android:textAlignment="center"
-		app:layout_constraintBottom_toTopOf="@+id/google_email_verification_activity_dob_layout"
-		app:layout_constraintTop_toTopOf="parent" />
+		android:layout_height="wrap_content">
 
-	<com.google.android.material.textfield.TextInputLayout
-		android:id="@+id/google_email_verification_activity_dob_layout"
-		style="@style/Widget.HappyApp.TextInputLayout"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		app:layout_constraintTop_toBottomOf="@+id/google_email_verification_activity_header">
-
-		<com.google.android.material.textfield.TextInputEditText
-			android:id="@+id/google_email_verification_activity_dob_field"
+		<TextView
+			android:id="@+id/google_email_verification_activity_header"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:hint="@string/plain_date_of_birth" />
-	</com.google.android.material.textfield.TextInputLayout>
+			android:layout_margin="13dp"
+			android:text="@string/contraction_google_email_verification_header"
+			android:textAlignment="center"
+			app:layout_constraintBottom_toTopOf="@+id/google_email_verification_activity_dob_layout"
+			app:layout_constraintTop_toTopOf="parent" />
 
-	<com.google.android.material.checkbox.MaterialCheckBox
-		android:id="@+id/google_email_verification_activity_pp_tc_checkbox"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_marginTop="13dp"
-		android:text="@string/contraction_confirm_tc_privacy_policy"
-		app:layout_constraintBottom_toTopOf="@+id/google_email_verification_activity_seperator_view"
-		app:layout_constraintTop_toBottomOf="@+id/google_email_verification_activity_dob_layout" />
+		<com.google.android.material.textfield.TextInputLayout
+			android:id="@+id/google_email_verification_activity_dob_layout"
+			style="@style/Widget.HappyApp.TextInputLayout"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			app:layout_constraintTop_toBottomOf="@+id/google_email_verification_activity_header">
 
-	<View
-		android:id="@+id/google_email_verification_activity_seperator_view"
-		style="@style/Widget.HappyApp.Seperator.View"
-		android:layout_marginTop="100dp"
-		app:layout_constraintTop_toBottomOf="@+id/google_email_verification_activity_pp_tc_checkbox"
-		tools:ignore="MissingConstraints" />
+			<com.google.android.material.textfield.TextInputEditText
+				android:id="@+id/google_email_verification_activity_dob_field"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:hint="@string/plain_date_of_birth"
+				android:inputType="none" />
+		</com.google.android.material.textfield.TextInputLayout>
 
-	<TextView
-		android:id="@+id/google_email_verification_activity_email_text_view"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_marginTop="13dp"
-		android:text="@string/plain_i_didn_t_get_an_email"
-		android:textAlignment="center"
-		android:textAppearance="?attr/textAppearanceBody1"
-		app:layout_constraintTop_toBottomOf="@+id/google_email_verification_activity_seperator_view" />
+		<com.google.android.material.checkbox.MaterialCheckBox
+			android:id="@+id/google_email_verification_activity_pp_tc_checkbox"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="13dp"
+			android:text="@string/contraction_confirm_tc_privacy_policy"
+			app:layout_constraintBottom_toTopOf="@+id/google_email_verification_activity_subscription_view_pager_title"
+			app:layout_constraintTop_toBottomOf="@+id/google_email_verification_activity_dob_layout" />
 
-	<com.google.android.material.button.MaterialButton
-		android:id="@+id/google_email_verification_activity_back_button"
-		style="@style/Widget.HappyApp.TextButton"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="@string/plain_back"
-		app:layout_constraintEnd_toStartOf="@+id/google_email_verification_activity_send_again_button"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/google_email_verification_activity_email_text_view" />
+		<TextView
+			android:id="@+id/google_email_verification_activity_subscription_view_pager_title"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="3.13dp"
+			android:text="@string/plain_subscribe"
+			android:textAlignment="center"
+			android:textAppearance="?attr/textAppearanceHeadline5"
+			app:layout_constraintBottom_toTopOf="@+id/google_email_verification_activity_subscription_view_pager"
+			app:layout_constraintTop_toBottomOf="@+id/google_email_verification_activity_pp_tc_checkbox" />
 
-	<com.google.android.material.button.MaterialButton
-		android:id="@+id/google_email_verification_activity_send_again_button"
-		style="@style/Widget.HappyApp.ContainedButton"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="@string/plain_send_again"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toEndOf="@+id/google_email_verification_activity_back_button"
-		app:layout_constraintTop_toBottomOf="@+id/google_email_verification_activity_email_text_view" />
+		<androidx.viewpager2.widget.ViewPager2
+			android:id="@+id/google_email_verification_activity_subscription_view_pager"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="3.13dp"
+			app:layout_constraintBottom_toTopOf="@+id/google_email_verification_activity_seperator_view"
+			app:layout_constraintTop_toBottomOf="@+id/google_email_verification_activity_subscription_view_pager_title" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+		<View
+			android:id="@+id/google_email_verification_activity_seperator_view"
+			style="@style/Widget.HappyApp.Seperator.View"
+			app:layout_constraintTop_toBottomOf="@+id/google_email_verification_activity_subscription_view_pager"
+			tools:ignore="MissingConstraints" />
+
+		<TextView
+			android:id="@+id/google_email_verification_activity_email_text_view"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="13dp"
+			android:text="@string/plain_i_didn_t_get_an_email"
+			android:textAlignment="center"
+			android:textAppearance="?attr/textAppearanceBody1"
+			app:layout_constraintTop_toBottomOf="@+id/google_email_verification_activity_seperator_view" />
+
+		<com.google.android.material.button.MaterialButton
+			android:id="@+id/google_email_verification_activity_send_again_button"
+			style="@style/Widget.HappyApp.ContainedButton"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/plain_send_again"
+			app:layout_constraintBottom_toTopOf="@+id/google_email_verification_activity_logout_button"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@+id/google_email_verification_activity_email_text_view" />
+
+		<com.google.android.material.button.MaterialButton
+			android:id="@+id/google_email_verification_activity_logout_button"
+			style="@style/Widget.HappyApp.OutlinedButton"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/plain_logout"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@+id/google_email_verification_activity_send_again_button" />
+	</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
