--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -3,7 +3,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".OnboardingActivity">
+	tools:context="com.aresid.happyapp.android.aresid.happyapp.OnboardingActivity">
 
 	<FrameLayout
 		android:id="@+id/onboarding_fragment_container"
