--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,7 +6,7 @@
 	android:layout_height="match_parent"
 	android:background="@color/color_accent"
 	app:layout_behavior="@string/appbar_scrolling_view_behavior"
-	tools:context=".MainActivity"
+	tools:context="com.aresid.happyapp.android.aresid.happyapp.MainActivity"
 	tools:showIn="@layout/app_bar_main">
 
 	<FrameLayout
