--- a/app/src/main/res/layout/fragment_account_level.xml
+++ b/app/src/main/res/layout/fragment_account_level.xml
@@ -4,7 +4,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".AccountLevelFragment">
+	tools:context="com.aresid.happyapp.android.aresid.happyapp.AccountLevelFragment">
 
 	<androidx.viewpager2.widget.ViewPager2
 		android:id="@+id/account_level_variants_holder"
