--- a/app/src/main/res/layout/fragment_offer.xml
+++ b/app/src/main/res/layout/fragment_offer.xml
@@ -8,7 +8,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:orientation="vertical"
-		tools:context=".OfferFragment">
+		tools:context="com.aresid.happyapp.android.aresid.happyapp.OfferFragment">
 
 		<TextView
 			android:layout_width="match_parent"
