--- a/app/src/main/res/layout/item_viewpager.xml
+++ b/app/src/main/res/layout/item_viewpager.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:id="@+id/container2"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
@@ -41,6 +42,31 @@
 		android:textAppearance="?attr/textAppearanceSubtitle1"
 		app:layout_constraintBottom_toTopOf="@+id/view_pager_bt_confirm"
 		app:layout_constraintTop_toBottomOf="@+id/view_pager_tv_description" />
+
+	<LinearLayout
+		android:id="@+id/entry_activity_checkout_waiting_assistant_layout"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:gravity="center"
+		android:orientation="horizontal"
+		android:visibility="visible"
+		app:layout_constraintBottom_toTopOf="@+id/view_pager_bt_confirm"
+		tools:ignore="UseCompoundDrawables">
+
+		<ImageView
+			android:id="@+id/entry_activity_checkout_waiting_assistant"
+			android:layout_width="@dimen/waiting_assistant_small"
+			android:layout_height="@dimen/waiting_assistant_small"
+			android:contentDescription="@string/plain_processing_login" />
+
+		<TextView
+			android:id="@+id/entry_activity_checkout_waiting_assistant_text_view"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/plain_logging_in"
+			android:textAppearance="?attr/textAppearanceCaption" />
+	</LinearLayout>
+
 
 	<com.google.android.material.button.MaterialButton
 		android:id="@+id/view_pager_bt_confirm"
