--- a/app/src/main/res/layout/item_viewpager.xml
+++ b/app/src/main/res/layout/item_viewpager.xml
@@ -31,6 +31,31 @@
 		android:layout_height="match_parent"
 		android:visibility="visible">
 
+		<LinearLayout
+			android:id="@+id/view_pager_checkout_waiting_assistant_layout"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:gravity="center"
+			android:orientation="horizontal"
+			android:visibility="invisible"
+			app:layout_constraintTop_toBottomOf="@id/view_pager_tv_price"
+			app:layout_constraintBottom_toBottomOf="parent"
+			tools:ignore="UseCompoundDrawables">
+
+			<ImageView
+				android:id="@+id/view_pager_checkout_waiting_assistant"
+				android:layout_width="@dimen/waiting_assistant_small"
+				android:layout_height="@dimen/waiting_assistant_small"
+				android:contentDescription="@string/plain_processing_login" />
+
+			<TextView
+				android:id="@+id/view_pager_checkout_waiting_assistant_text_view"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="@string/plain_logging_in"
+				android:textAppearance="?attr/textAppearanceCaption" />
+		</LinearLayout>
+
 		<androidx.appcompat.widget.AppCompatImageView
 			android:layout_width="@dimen/image_view_app_logo_size"
 			android:layout_height="@dimen/image_view_app_logo_size"
@@ -39,15 +64,6 @@
 			app:layout_constraintBottom_toTopOf="@id/view_pager_tv_title"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="parent" />
-
-		<androidx.appcompat.widget.AppCompatTextView
-			android:id="@+id/view_pager_tv_title"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:gravity="center"
-			android:textAppearance="?attr/textAppearanceHeadline5"
-			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintTop_toTopOf="parent" />
 
 		<androidx.appcompat.widget.AppCompatTextView
@@ -68,30 +84,14 @@
 			app:layout_constraintBottom_toTopOf="@+id/view_pager_bt_confirm"
 			app:layout_constraintTop_toBottomOf="@+id/view_pager_tv_description" />
 
-		<LinearLayout
-			android:id="@+id/view_pager_checkout_waiting_assistant_layout"
+		<androidx.appcompat.widget.AppCompatTextView
+			android:id="@+id/view_pager_tv_title"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:gravity="center"
-			android:orientation="horizontal"
-			android:visibility="invisible"
-			app:layout_constraintBottom_toTopOf="@+id/view_pager_bt_confirm"
-			app:layout_constraintTop_toBottomOf="@+id/view_pager_tv_price"
-			tools:ignore="UseCompoundDrawables">
-
-			<ImageView
-				android:id="@+id/view_pager_checkout_waiting_assistant"
-				android:layout_width="@dimen/waiting_assistant_small"
-				android:layout_height="@dimen/waiting_assistant_small"
-				android:contentDescription="@string/plain_processing_login" />
-
-			<TextView
-				android:id="@+id/view_pager_checkout_waiting_assistant_text_view"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:text="@string/plain_logging_in"
-				android:textAppearance="?attr/textAppearanceCaption" />
-		</LinearLayout>
+			android:textAppearance="?attr/textAppearanceHeadline5"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintTop_toTopOf="parent" />
 
 
 		<com.google.android.material.button.MaterialButton
