finished dynamic adding subscriptions & implemented dynamic support for the sub icon.

--- a/app/src/main/res/layout/item_viewpager.xml
+++ b/app/src/main/res/layout/item_viewpager.xml
@@ -59,7 +59,7 @@
 				android:layout_width="@dimen/image_view_app_logo_size"
 				android:layout_height="@dimen/image_view_app_logo_size"
 				android:antialias="true"
-				android:src="@drawable/ic_app_logo"
+				android:id="@+id/view_pager_subscription_icon"
 				app:layout_constraintBottom_toTopOf="@id/view_pager_tv_title"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
