--- a/app/src/main/res/layout/activity_entry.xml
+++ b/app/src/main/res/layout/activity_entry.xml
@@ -42,6 +42,7 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content">
 
+
 			<ImageView
 				android:id="@+id/entry_activity_app_logo"
 				android:layout_width="@dimen/image_view_app_logo_size"
@@ -50,92 +51,87 @@
 				android:layout_marginBottom="50dp"
 				android:contentDescription="@string/plain_happy_app_logo"
 				android:src="@drawable/ic_app_logo"
-				app:layout_constraintBottom_toTopOf="@+id/entry_activity_login_email_layout"
+				app:layout_constraintBottom_toTopOf="@+id/entry_activity_login_parent"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintTop_toTopOf="parent" />
 
-			<com.google.android.material.textfield.TextInputLayout
-				android:id="@+id/entry_activity_login_email_layout"
-				style="@style/Widget.HappyApp.TextInputLayout"
+			<androidx.constraintlayout.widget.ConstraintLayout
+				android:id="@+id/entry_activity_login_parent"
 				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:hint="@string/plain_email"
-				app:errorEnabled="true"
-				app:layout_constraintBottom_toTopOf="@+id/entry_activity_login_password_layout"
-				app:layout_constraintTop_toBottomOf="@+id/entry_activity_app_logo">
+				android:layout_height="match_parent"
+				app:layout_constraintBottom_toTopOf="@id/entry_activity_registration_seperator_view"
+				app:layout_constraintTop_toBottomOf="@id/entry_activity_app_logo">
 
-				<com.google.android.material.textfield.TextInputEditText
-					android:id="@+id/entry_activity_login_email_field"
+				<com.google.android.material.textfield.TextInputLayout
+					android:id="@+id/entry_activity_login_email_layout"
+					style="@style/Widget.HappyApp.TextInputLayout"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:imeActionId="0"
-					android:imeOptions="actionNext"
-					android:inputType="textEmailAddress"
-					android:maxLines="1" />
-			</com.google.android.material.textfield.TextInputLayout>
+					android:hint="@string/plain_email"
+					app:errorEnabled="true"
+					app:layout_constraintBottom_toTopOf="@+id/entry_activity_login_password_layout"
+					app:layout_constraintTop_toTopOf="parent">
 
-			<com.google.android.material.textfield.TextInputLayout
-				android:id="@+id/entry_activity_login_password_layout"
-				style="@style/Widget.HappyApp.TextInputLayout"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:hint="@string/plain_password"
-				app:errorEnabled="true"
-				app:layout_constraintBottom_toTopOf="@+id/entry_activity_email_login_seperator_view"
-				app:layout_constraintTop_toBottomOf="@id/entry_activity_login_email_layout"
-				app:passwordToggleEnabled="true">
+					<com.google.android.material.textfield.TextInputEditText
+						android:id="@+id/entry_activity_login_email_field"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:imeActionId="0"
+						android:imeOptions="actionNext"
+						android:inputType="textEmailAddress"
+						android:maxLines="1" />
+				</com.google.android.material.textfield.TextInputLayout>
 
-				<com.google.android.material.textfield.TextInputEditText
-					android:id="@+id/entry_activity_login_password_field"
+				<com.google.android.material.textfield.TextInputLayout
+					android:id="@+id/entry_activity_login_password_layout"
+					style="@style/Widget.HappyApp.TextInputLayout"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:imeActionId="1"
-					android:imeOptions="actionDone"
-					android:inputType="textPassword"
-					android:maxLines="1" />
-			</com.google.android.material.textfield.TextInputLayout>
+					android:hint="@string/plain_password"
+					app:errorEnabled="true"
+					app:layout_constraintBottom_toBottomOf="parent"
+					app:layout_constraintTop_toBottomOf="@id/entry_activity_login_email_layout"
+					app:passwordToggleEnabled="true">
 
-			<com.google.android.material.button.MaterialButton
-				android:id="@+id/entry_activity_login_login_button"
-				style="@style/Widget.HappyApp.ContainedButton"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:text="@string/plain_login"
-				app:layout_constraintEnd_toEndOf="@+id/entry_activity_login_password_layout"
-				app:layout_constraintTop_toBottomOf="@+id/entry_activity_login_password_layout" />
+					<com.google.android.material.textfield.TextInputEditText
+						android:id="@+id/entry_activity_login_password_field"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:imeActionId="1"
+						android:imeOptions="actionDone"
+						android:inputType="textPassword"
+						android:maxLines="1" />
+				</com.google.android.material.textfield.TextInputLayout>
 
-			<LinearLayout
-				android:id="@+id/entry_activity_login_waiting_assistant_layout"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:gravity="center"
-				android:orientation="horizontal"
-				android:visibility="gone"
-				app:layout_constraintStart_toStartOf="@+id/entry_activity_login_password_layout"
-				app:layout_constraintTop_toBottomOf="@+id/entry_activity_login_password_layout"
-				tools:ignore="UseCompoundDrawables">
-
-				<ImageView
+				<ProgressBar
 					android:id="@+id/entry_activity_login_waiting_assistant"
-					android:layout_width="@dimen/waiting_assistant_small"
-					android:layout_height="@dimen/waiting_assistant_small"
-					android:contentDescription="@string/plain_processing_login" />
-
-				<TextView
-					android:id="@+id/entry_activity_login_waiting_assistant_text_view"
+					style="@android:style/Widget.Material.Light.ProgressBar.Small"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:text="@string/plain_logging_in"
-					android:textAppearance="?attr/textAppearanceCaption" />
-			</LinearLayout>
+					android:visibility="gone"
+					app:layout_constraintBottom_toBottomOf="parent"
+					app:layout_constraintEnd_toEndOf="parent"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toTopOf="parent" />
+
+			</androidx.constraintlayout.widget.ConstraintLayout>
+
+			<!--			<com.google.android.material.button.MaterialButton-->
+			<!--				android:id="@+id/entry_activity_login_login_button"-->
+			<!--				style="@style/Widget.HappyApp.ContainedButton"-->
+			<!--				android:layout_width="wrap_content"-->
+			<!--				android:layout_height="wrap_content"-->
+			<!--				android:text="@string/plain_login"-->
+			<!--				app:layout_constraintEnd_toEndOf="@+id/entry_activity_login_password_layout"-->
+			<!--				app:layout_constraintTop_toBottomOf="@+id/entry_activity_login_password_layout" />-->
 
 			<View
 				android:id="@+id/entry_activity_email_login_seperator_view"
 				style="@style/Widget.HappyApp.Seperator.View"
 				android:layout_marginTop="100.13dp"
 				app:layout_constraintBottom_toTopOf="@+id/entry_activity_google_login_seperator_text_view"
-				app:layout_constraintTop_toBottomOf="@id/entry_activity_login_password_layout"
+				app:layout_constraintTop_toBottomOf="@id/entry_activity_login_parent"
 				tools:ignore="MissingConstraints" />
 
 			<TextView
