--- a/app/src/main/res/layout/item_viewpager.xml
+++ b/app/src/main/res/layout/item_viewpager.xml
@@ -11,7 +11,7 @@
 		android:layout_height="match_parent"
 		android:gravity="center"
 		android:orientation="vertical"
-		android:visibility="visible">
+		android:visibility="gone">
 
 		<ImageView
 			android:id="@+id/view_pager_waiting_assistant"
